--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
       # url: mailto:your.name@email.com
     - label: "Music"
       icon: "fas fa-fw fa-link"
-      url: "https://ianterry.bandcamp.com"
+      url: "https://song.link/FSZnsMdnZQsXF"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
