--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   #location         : "Somewhere"
   email            :
   links:
-    - label: "Email"
+    - label: "Linkedin"
       icon: "fas fa-fw fa-envelope-square"
       # url: mailto:your.name@email.com
     - label: "Music"
